# emd

./: .gitignore  Cargo.toml  README.md
emd/: Cargo.toml  build.rs
emd-common/: Cargo.toml
emd-common/src/: lib.rs
emd-ebpf/: Cargo.toml  build.rs
emd-ebpf-impl/: Cargo.toml
emd-ebpf-impl/.cargo/: config.toml
emd-ebpf-impl/src/: main.rs
emd-ebpf/assets/: emd_ebpf_prebuild
emd-ebpf/src/: lib.rs  main.rs
emd/src/: address_calculation.rs  iomem.rs  main.rs  memory_dump.rs  traits.rs
