[workspace]
resolver = "2"
members = ["emd", "emd-ebpf", "emd-common"]
default-members = ["emd"]

[workspace.dependencies]
aya = { version = "0.13.1", default-features = false }
aya-build = { version = "0.1.2", default-features = false }
aya-ebpf = { version = "0.1.1", default-features = false }
aya-log = { version = "0.2.1", default-features = false }
aya-log-ebpf = { version = "0.1.1", default-features = false }

anyhow = { version = "1", default-features = false }
clap = { version = "4.5.30", default-features = false, features = ["std"] }
env_logger = { version = "0.11.5", default-features = false }
libc = { version = "0.2.159", default-features = false }
log = { version = "0.4.26", default-features = false }
which = { version = "7.0.2", default-features = false }
procfs = { version = "0.14" }
tokio = { version = "1.40.0", default-features = false }

[profile.release.package.emd-ebpf]
debug = 2
codegen-units = 1