[workspace]
resolver = "2"
members = ["emd", "emd-ebpf", "emd-common"]
default-members = ["emd"]

[workspace.dependencies]
aya = { version = "0.13.1", default-features = false }
aya-build = { version = "0.1.2", default-features = false }
aya-ebpf = { version = "0.1.1", default-features = false }

anyhow = { version = "1", default-features = false }
clap = { version = "4.5.30" }
env_logger = { version = "0.11.5" }
libc = { version = "0.2.159", default-features = false }
log = { version = "0.4.26", default-features = false }
which = { version = "7.0.2", default-features = false }
procfs = { version = "0.14" }

[profile.release.package.emd-ebpf]
debug = 2
codegen-units = 1
opt-level = 0