[package]
name = "emd-common"
version = "0.3.1"
edition = "2021"
authors = ["ph0llux <ph0llux@pm.me>"]
license = "GPL-3.0"
description = "Various common stuff, necessary for emd"
repository = "https://github.com/ph0llux/emd"
keywords = ["forensics", "memory", "acquisition", "security"]
publish = true

[features]
default = []
std = []

[lib]
path = "src/lib.rs"
