[package]
name = "emd-ebpf-impl"
version = "1.0.0"
edition = "2021"
authors = ["ph0llux, 0x11d875"]
license = "GPL-3.0"
description = """
The internal eBPF implementation (for use by emd-ebpf).
This implementation is intended to use only with bpfel-unknown-none target.
"""
repository = "https://github.com/ph0llux/emd"
keywords = ["forensics", "memory", "acquisition", "security", "ebpf"]

[dependencies]
aya-ebpf = { workspace = true }
emd-common = { version = "0.3.1"}

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "emd_ebpf"
path = "src/main.rs"

[profile.release]
debug = 2
codegen-units = 1
opt-level = 0
panic = "abort"

[profile.dev]
debug = 2
codegen-units = 1
opt-level = 0
panic = "abort"