[package]
name = "emd-ebpf"
version = "1.0.0"
edition = "2021"
authors = ["ph0llux"]
license = "GPL-3.0"
description = "This library contains the eBPF binary for emd."
repository = "https://github.com/ph0llux/emd"
keywords = ["forensics", "memory", "acquisition", "security", "ebpf"]
include = [
    "assets/emd_ebpf_prebuild"
]

[dependencies]
aya ={ workspace = true }

[build-dependencies]
aya-build = { workspace = true }
anyhow = { workspace = true }
emd-ebpf-impl = { version = "1.0.0"}

[features]
default = []
build = [] # Build eBPF instead of using the prebuild ebpf binary

[lib]