[package]
name = "emd-ebpf"
version = "1.0.3"
edition = "2021"
authors = ["ph0llux"]
license = "GPL-3.0"
description = "This library contains the eBPF binary for emd."
repository = "https://github.com/ph0llux/emd"
keywords = ["forensics", "memory", "acquisition", "security", "ebpf"]
include = [
    "assets/emd_ebpf_prebuild",
    "**"
]

[dependencies]
aya = { version = "0.13.1", default-features = false }

[build-dependencies]
aya-build = { version = "0.1.2", default-features = false,  optional = true  }
anyhow = { version = "1", default-features = false,  optional = true  }
emd-ebpf-impl = { version = "1.0.1",  optional = true }

[features]
default = []
build = ["dep:aya-build", "dep:anyhow", "dep:emd-ebpf-impl"] # Build eBPF instead of using the prebuild ebpf binary

[lib]