[package]
name = "emd-ebpf"
version = "1.0.7"
edition = "2021"
authors = ["ph0llux"]
license = "GPL-3.0"
description = "This library contains the eBPF binary for emd."
repository = "https://github.com/ph0llux/emd"
keywords = ["forensics", "memory", "acquisition", "security", "ebpf"]
include = [
    "assets/emd_ebpf_prebuild",
    "**"
]

[dependencies]
aya = { version = "0.13.1", default-features = false }

[build-dependencies]
aya-build = { version = "0.1.2", default-features = false,  optional = true  }
anyhow = { version = "1", default-features = false  }
cargo_metadata = "0.19.2"
emd-ebpf-impl = { version = "1.1.1", optional = true }

[features]
default = []
log = ["emd-ebpf-impl/log"]
build = ["dep:aya-build", "dep:emd-ebpf-impl"] # Build eBPF instead of using the prebuild ebpf binary

[lib]