[package]
name = "emdumper"
version = "0.5.1"
edition = "2021"
authors = ["ph0llux"]
license = "GPL-3.0"
description = "A tool to acquire the physical memory on linux systems (root is necessary)"
repository = "https://github.com/ph0llux/emd"
keywords = ["forensics", "memory", "acquisition", "security"]

[dependencies]
anyhow = { workspace = true, default-features = true }
aya = { workspace = true }
env_logger = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
procfs ={ workspace = true }
clap = { workspace = true, features = ["derive"] }
walkdir = { workspace = true }
zstd = { workspace = true }
lz4_flex = { workspace = true }
emd-ebpf = { path="../emd-ebpf", features = ["build"]}
emd-common = { path="../emd-common", features = ["std"]}


[build-dependencies]
anyhow = { workspace = true }
aya-build = { workspace = true }
cargo_metadata = "0.19.2"
emd-common = { path="../emd-common", features = ["std"]}

[[bin]]
name = "emd"
path = "src/main.rs"

[profile.release.package.emd-ebpf]
debug = 2
codegen-units = 1
opt-level = 0