[package]
name = "emdumper"
version = "0.7.1"
edition = "2024"
authors = ["ph0llux"]
license = "GPL-3.0"
description = "A tool to acquire the physical memory on linux systems (root is necessary)"
repository = "https://github.com/ph0llux/emd"
keywords = ["forensics", "memory", "acquisition", "security"]
readme = "../README.md"

[dependencies]
anyhow = { version = "1" }
aya = { version = "0.13.1", default-features = false }
aya-log ={ version =  "0.2.1"}
caps ={ version = "0.5.5"}
clap = { version = "4.5.30", features = ["derive"]}
emd-ebpf = { version = "1.0.7", features = ["log"]}
emd-common = { version = "0.5.0", features = ["std"]}
env_logger = { version = "0.11.7" }
indicatif = "0.18.3"
indicatif-log-bridge = "0.2.3"
libc = { version = "0.2.159", default-features = false }
log = { version = "0.4.26", default-features = false }
lz4_flex = { version = "0.12", features = ["frame"] }
procfs = { version = "0.18" }
tokio = { version = "1.44.1", default-features = false, features = ["macros", "rt", "rt-multi-thread", "signal"] }
walkdir = { version = "2" }
zstd = { version = "0.13", features = ["zstdmt"] }

[[bin]]
name = "emd"
path = "src/main.rs"